--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css"> 
-    <link rel="stylesheet" href="./style.css"> 
     <title>Место</title>
 </head>
 
@@ -18,16 +17,11 @@
         <section class="profile">
             <img class="profile__logo" src="./images/avatar.jpg" alt="Фото Жака Кусто">
             <div class="profile__info">
-                <h1 class="profile__title">Жак-Ив Кусто
-                    <nav class="profile__navigation">
-                        <ul class="menu">
-                            <li class="menu__item">
-                                <button class="menu__open-popup" type="submit"><img src="./images/redact.svg" alt="редактор"></button>
-                            </li>
-                        </ul>
-                    </nav>                    
-                </h1>
-                <p class="profile__subtitle">Исследователь океана</p>                
+                <nav class="profile__navigation">
+                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <button class="profile__open-popup" type="button"><img src="./images/redact.svg" alt="редактор"></button>
+                </nav>
+                <p class="profile__subtitle">Исследователь океана</p>
             </div>
             <button class="profile__button">
                 <img class="profile__plus" src="./images/plus.svg" alt="кнопка">
@@ -38,42 +32,42 @@
                 <img class="element__image" src="./images/Karachaevsk.png" alt="Карачаевск">
                 <div class="element__rectangel">
                     <h2 class="element__title">Карачаевск</h2>
-                    <button class="element__button"><img  class="element__like" src="./images/like.png" alt="Лайк"></button>
+                    <button class="element__button"></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Elbrus.png" alt="Эльбрус">
                 <div class="element__rectangel">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <button class="element__button"><img  class="element__like" src="./images/like.png" alt="Лайк"></button>
+                    <button class="element__button"></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Dombai.png" alt="Домбай">
                 <div class="element__rectangel">
                     <h2 class="element__title">Домбай</h2>
-                    <button class="element__button"><img  class="element__like" src="./images/like.png" alt="Лайк"></button>
+                    <button class="element__button"></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Elbrus.png" alt="Эльбрус">
                 <div class="element__rectangel">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <button class="element__button"><img  class="element__like" src="./images/like.png" alt="Лайк"></button>
+                    <button class="element__button"></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Dombai.png" alt="Домбай">
                 <div class="element__rectangel">
                     <h2 class="element__title">Домбай</h2>
-                    <button class="element__button"><img  class="element__like" src="./images/like.png" alt="Лайк"></button>
+                    <button class="element__button"></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Karachaevsk.png" alt="Карачаево-Черкессия">
                 <div class="element__rectangel">
                     <h2 class="element__title">Карачаево-Черкессия</h2>
-                    <button class="element__button"><img  class="element__like element__like_active" src="./images/like.png" alt="Лайк"></button>
+                    <button class="element__button"></button>
                 </div>
             </figure>
         </section>
