--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="./images/Vector.png" alt="Mesto Russia">
+        <img class="header__logo" src="./images/Vector.png" alt="Логотип Место Россия">
         <img class="header__line" src="./images/Line.png" alt="линия">
     </header>
 
@@ -70,8 +70,6 @@
                     <button class="element__button"></button>
                 </div>
             </figure>
-        </section>
-
         </section>
     </main>
     
