--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <section class="profile">
             <img class="profile__logo" src="./images/avatar.jpg" alt="Фото Жака Кусто">
             <div class="profile__info">
-                <form class="profile__navigation">
+                <div class="profile__navigation">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <input type="button" class="profile__open-popup" value=" ">
-                </form>
+                </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
             <input type="button" class="profile__button" value=" ">                       
