--- a/index.html
+++ b/index.html
@@ -18,53 +18,53 @@
             <div class="profile__info">
                 <div class="profile__navigation">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <input type="button" class="profile__open-popup" value=" ">
+                    <button type="button" class="profile__open-popup" value=" "></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
-            <input type="button" class="profile__button" value=" ">                       
+            <button type="button" class="profile__button" value=" "></button>                      
         </section>
         <section class="elments">
             <figure class="element">
                 <img class="element__image" src="./images/Karachaevsk.png" alt="Карачаевск">
                 <div class="element__rectangel">
                     <h2 class="element__title">Карачаевск</h2>
-                    <input type="button" class="element__button" value=" ">
+                    <button type="button" class="element__button" value=" "></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Elbrus.png" alt="Эльбрус">
                 <div class="element__rectangel">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <input type="button" class="element__button" value=" ">
+                    <button type="button" class="element__button" value=" "></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Dombai.png" alt="Домбай">
                 <div class="element__rectangel">
                     <h2 class="element__title">Домбай</h2>
-                    <input type="button" class="element__button" value=" ">
+                    <button type="button" class="element__button" value=" "></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Elbrus.png" alt="Эльбрус">
                 <div class="element__rectangel">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <input type="button" class="element__button" value=" ">
+                    <button type="button" class="element__button" value=" "></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Dombai.png" alt="Домбай">
                 <div class="element__rectangel">
                     <h2 class="element__title">Домбай</h2>
-                    <input type="button" class="element__button" value=" ">
+                    <button type="button" class="element__button" value=" "></button>
                 </div>
             </figure>
             <figure class="element">
                 <img class="element__image" src="./images/Karachaevsk.png" alt="Карачаево-Черкессия">
                 <div class="element__rectangel">
                     <h2 class="element__title">Карачаево-Черкессия</h2>
-                    <input type="button" class="element__button" value=" ">
+                    <button type="button" class="element__button" value=" "></button>
                 </div>
             </figure>
         </section>
