--- a/index.html
+++ b/index.html
@@ -25,54 +25,7 @@
             <button type="button" class="profile__button" value=" "></button>                      
         </section>
         <section class="elments" id="cards">
-            <figure class="element">
-                <button class="element__delete" type="button" value=" "></button>
-                <img class="element__image" src="./images/Karachaevsk.png" alt="Карачаевск">
-                <div class="element__rectangel">
-                    <h2 class="element__title">Карачаевск</h2>
-                    <button type="button" class="element__button" value=" "></button>
-                </div>
-            </figure>
-            <figure class="element">
-                <button class="element__delete" type="button" value=" "></button>
-                <img class="element__image" src="./images/Elbrus.png" alt="Эльбрус">
-                <div class="element__rectangel">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <button type="button" class="element__button" value=" "></button>
-                </div>
-            </figure>
-            <figure class="element">
-                <button class="element__delete" type="button" value=" "></button>
-                <img class="element__image" src="./images/Dombai.png" alt="Домбай">
-                <div class="element__rectangel">
-                    <h2 class="element__title">Домбай</h2>
-                    <button type="button" class="element__button" value=" "></button>
-                </div>
-            </figure>
-            <figure class="element">
-                <button class="element__delete" type="button" value=" "></button>
-                <img class="element__image" src="./images/Elbrus.png" alt="Эльбрус">
-                <div class="element__rectangel">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <button type="button" class="element__button" value=" "></button>
-                </div>
-            </figure>
-            <figure class="element">
-                <button class="element__delete" type="button" value=" "></button>
-                <img class="element__image" src="./images/Dombai.png" alt="Домбай">
-                <div class="element__rectangel">
-                    <h2 class="element__title">Домбай</h2>
-                    <button type="button" class="element__button" value=" "></button>
-                </div>
-            </figure>
-            <figure class="element">
-                <button class="element__delete" type="button" value=" "></button>
-                <img class="element__image" src="./images/Karachaevsk.png" alt="Карачаево-Черкессия">
-                <div class="element__rectangel">
-                    <h2 class="element__title">Карачаево-Черкессия</h2>
-                    <button type="button" class="element__button" value=" "></button>
-                </div>
-            </figure>
+            
         </section>
         <template class="spot">
             <figure class="element">
@@ -80,7 +33,7 @@
                 <img class="element__image" src="" alt="spot">
                 <div class="element__rectangel">
                     <h2 class="element__title">Spot Name</h2>
-                    <button type="button" class="element__button" value=" "></button>
+                    <button type="button" class="element__button" value=""></button>
                 </div>
             </figure>
         </template>
@@ -111,6 +64,15 @@
                 <button class="popup-plus__submit-button" type="submit" name="submit-button" value="сохранить">Создать</button>
             </form>
         </div>
+    </div>
+    <div class="popup-image">
+        <div class="popup-image__opened">
+            <button class="popup-image__close-button" type="button" name="close-button"></button>
+            <figure class="popup-image__container">
+                <img class="popup-image__big" src="#" alt="название">
+                <figcaption class="popup-image__text"></figcaption>
+            </figure>
+        </div>        
     </div>
     <script src="./scripts/script.js"></script>
 </body>
