--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <button class="close-button" type="button" name="close-button"></button>
             <h3 class="popup-plus__title">Новое место</h3>
             <form class="popup-plus__container">
-                <input class="popup-plus__name" type="text" name="name" placeholder="Название" value="Название" required>
-                <input class="popup-plus__info" type="url" name="info" placeholder="Ссылка на каринку" value=" " required>
-                <button class="popup-plus__submit-button" type="submit" name="submit-button" value="сохранить">Создать</button>
+                <input class="popup-plus__name" type="text" name="place" placeholder="Название" value="" required>
+                <input class="popup-plus__info" type="url" name="link" placeholder="Ссылка на каринку" value="" required>
+                <button class="popup-plus__submit-button" type="reset" name="submit-button" value="сохранить">Создать</button>
             </form>
         </div>
     </div>
