--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
     </footer>
     <!--Попап-->
     <div id="popup" class="popup popup-modal">
-        <div class="popup__form form" novalidate> 
+        <div class="popup__form form"> 
             <button class="close-button" type="button" name="close-button"></button>
             <h3 class="popup__title">Редактировать профиль</h3>
-            <form class="popup__container form__set">
+            <form class="popup__container form__set" novalidate>
                 <input class="popup__name form__input" id="name-input" type="text" name="name" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто" required minlength="2" maxlength="40">
-                <span class="form__input-error error_name"></span>
+                <span class="form__input-error error-name top" id="name-input-error"></span>
                 <input class="popup__info form__input" id="info-input" type="text" name="info" placeholder="Исследователь океана" value="Исследователь океана" required minlength="2" maxlength="200">
-                <span class="form__input-error error_info"></span>
-                <button class="popup__submit-button form__submit" type="button" name="submit-button" value="сохранить">Сохранить</button>
+                <span class="form__input-error error-info error" id="info-input-error"></span>
+                <button class="popup__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Сохранить</button>
             </form>
         </div>
     </div>
     <div class="popup-modal popup-plus">
-        <div class="popup-plus__form" novalidate>
+        <div class="popup-plus__form form">
             <button class="close-button" type="button" name="close-button"></button>
             <h3 class="popup-plus__title">Новое место</h3>
-            <form class="popup-plus__container form" novalidate>
+            <form class="popup-plus__container form__set" novalidate>
                 <input class="popup-plus__name form__input" id="place-input" type="text" name="place" placeholder="Название" value="" required minlength="1" maxlength="30">
-                <span class="form__input-error error_place" id="place-input-error"></span>
+                <span class="form__input-error error-place top" id="place-input-error"></span>
                 <input class="popup-plus__info form__input" id="url-input" type="url" name="link" placeholder="Ссылка на каринку" value="" required>
-                <span class="form__input-error error_link" id="link-input-error"></span>
-                <button class="popup-plus__submit-button" type="submit" name="submit-button" value="сохранить">Создать</button>
+                <span class="form__input-error error-link error" id="url-input-error"></span>
+                <button class="popup-plus__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Создать</button>
             </form>
         </div>
     </div>
