--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <button class="close-button" type="button" name="close-button"></button>
             <h3 class="popup__title">Редактировать профиль</h3>
             <form class="popup__container form__set" novalidate name="profile-form">
-                <input class="popup__name form__input" id="name-input" type="text" name="name" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто" required minlength="2" maxlength="40">
+                <input class="popup__name form__input" id="name-input" type="text" name="name-input" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто" required minlength="2" maxlength="40">
                 <span class="form__input-error error-name top" id="name-input-error"></span>
-                <input class="popup__info form__input" id="info-input" type="text" name="info" placeholder="Исследователь океана" value="Исследователь океана" required minlength="2" maxlength="200">
+                <input class="popup__info form__input" id="info-input" type="text" name="info-input" placeholder="Исследователь океана" value="Исследователь океана" required minlength="2" maxlength="200">
                 <span class="form__input-error error-info error" id="info-input-error"></span>
                 <button class="popup__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Сохранить</button>
             </form>
@@ -61,9 +61,9 @@
             <button class="close-button" type="button" name="close-button"></button>
             <h3 class="popup-plus__title">Новое место</h3>
             <form class="popup-plus__container form__set" novalidate name="card-form">
-                <input class="popup-plus__name form__input" id="place-input" type="text" name="place" placeholder="Название" value="" required minlength="1" maxlength="30">
+                <input class="popup-plus__name form__input" id="place-input" type="text" name="place-input" placeholder="Название" value="" required minlength="1" maxlength="30">
                 <span class="form__input-error error-place top" id="place-input-error"></span>
-                <input class="popup-plus__info form__input" id="url-input" type="url" name="link" placeholder="Ссылка на каринку" value="" required>
+                <input class="popup-plus__info form__input" id="url-input" type="url" name="url-input" placeholder="Ссылка на каринку" value="" required>
                 <span class="form__input-error error-link error" id="url-input-error"></span>
                 <button class="popup-plus__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Создать</button>
             </form>
@@ -78,8 +78,9 @@
             </figure>
         </div>        
     </div>
-    <script src="./scripts/initialCards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/script.js"></script>
+    <!--   
+    <script src="./scripts/initialCards.js"></script> 
+    <script src="./scripts/validate.js"></script> -->
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
