--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,6 @@
     <!--   
     <script src="./scripts/initialCards.js"></script> 
     <script src="./scripts/validate.js"></script> -->
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="./pages/index.js" type="module"></script>
 </body>
 </html>
