--- a/src/index.html
+++ b/src/index.html
@@ -26,17 +26,7 @@
         </section>
         <section class="elments" id="cards">
             
-        </section>
-        <template class="spot">
-            <figure class="element">
-                <button class="element__delete" type="button" value=""></button>
-                <img class="element__image" src=" " alt="spot">
-                <div class="element__rectangel">
-                    <h2 class="element__title">Spot Name</h2>
-                    <button type="button" class="element__button" value=""></button>
-                </div>
-            </figure>
-        </template>
+        </section>       
     </main>
     
     <footer class="footer">
@@ -60,7 +50,7 @@
         <div class="popup-plus__form form">
             <button class="close-button" type="button" name="close-button"></button>
             <h3 class="popup-plus__title">Новое место</h3>
-            <form class="popup-plus__container form__set" novalidate name="card-form">
+            <form class="popup-plus__container form__set" novalidate name="card-form" id="card-form">
                 <input class="popup-plus__name form__input" id="place-input" type="text" name="place-input" placeholder="Название" value="" required minlength="1" maxlength="30">
                 <span class="form__input-error error-place top" id="place-input-error"></span>
                 <input class="popup-plus__info form__input" id="url-input" type="url" name="url-input" placeholder="Ссылка на каринку" value="" required>
@@ -78,6 +68,16 @@
             </figure>
         </div>        
     </div>
+    <template class="spot">
+        <figure class="element">
+            <button class="element__delete" type="button" value=""></button>
+            <img class="element__image" src=" " alt="spot">
+            <div class="element__rectangel">
+                <h2 class="element__title">Spot Name</h2>
+                <button type="button" class="element__button" value=""></button>
+            </div>
+        </figure>
+    </template>
     <!--   
     <script src="./scripts/initialCards.js"></script> 
     <script src="./scripts/validate.js"></script> -->
