--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 
     <main class="content">
         <section class="profile">
-            <img class="profile__logo" src="<%=require('./images/avatar.jpg')%>" alt="Фото Жака Кусто">
+            <button class="profile__logo-hover">
+                <img class="profile__logo" src="<%=require('./images/avatar.jpg')%>" alt="Фото Жака Кусто">
+            </button>
             <div class="profile__info">
                 <div class="profile__navigation">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -74,13 +76,34 @@
             <img class="element__image" src=" " alt="spot">
             <div class="element__rectangel">
                 <h2 class="element__title">Spot Name</h2>
-                <button type="button" class="element__button" value=""></button>
+                <div class="element__like">
+                    <button type="button" class="element__button" value=""></button>
+                    <h3 class="element__number"></h3>
+                </div>
             </div>
-        </figure>
     </template>
-    <!--   
-    <script src="./scripts/initialCards.js"></script> 
-    <script src="./scripts/validate.js"></script> -->
+    <!-- подтверждение удаления карточки -->
+    <div class="popup-modal popup-delete">
+        <div class="popup-delete__form">
+            <button class="close-button" type="button" name="close-button"></button>
+            <form class="popup-delete__container">
+                <h2 class="popup-delete__title">Вы уверены?</h2>
+                <button class="popup-delete__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Да</button>
+            </form>               
+        </div>
+    </div> 
+       <!-- Редактирование аватара -->
+    <div class="popup-modal popup-avatar">
+        <div class="popup-avatar__form">
+            <button class="close-button" type="button" name="close-button"></button>
+            <form class="popup-avatar__container">
+                <h2 class="popup-avatar__title">Обновить аватар</h2>
+                <input class="popup-avatar__input form__input" id="avatar-input" type="url" name="avatar-input" placeholder="Ссылка на каринку" value="" required>
+                <span class="form__input-error error-link error" id="avatar-input-error"></span>                
+                <button class="popup-avatar__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Cохранить</button>
+            </form>               
+        </div>
+    </div>
     <script src="./pages/index.js" type="module"></script>
 </body>
 </html>
