--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
             </button>
             <div class="profile__info">
                 <div class="profile__navigation">
-                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <h1 class="profile__title"></h1>
                     <button type="button" class="profile__open-popup" value=" "></button>
                 </div>
-                <p class="profile__subtitle">Исследователь океана</p>
+                <p class="profile__subtitle"></p>
             </div>
             <button type="button" class="profile__button" value=" "></button>                      
         </section>
