--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <form class="popup-plus__container form__set" novalidate name="card-form" id="card-form">
                 <input class="popup-plus__name form__input" id="place-input" type="text" name="place-input" placeholder="Название" value="" required minlength="1" maxlength="30">
                 <span class="form__input-error error-place top" id="place-input-error"></span>
-                <input class="popup-plus__info form__input" id="url-input" type="url" name="url-input" placeholder="Ссылка на каринку" value="" required>
+                <input class="popup-plus__info form__input" id="url-input" type="url" name="url-input" placeholder="Ссылка на картинку" value="" required>
                 <span class="form__input-error error-link error" id="url-input-error"></span>
                 <button class="popup-plus__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Создать</button>
             </form>
@@ -96,7 +96,7 @@
     <div class="popup-modal popup-avatar">
         <div class="popup-avatar__form">
             <button class="close-button" type="button" name="close-button"></button>
-            <form class="popup-avatar__container">
+            <form class="popup-avatar__container form__set">
                 <h2 class="popup-avatar__title">Обновить аватар</h2>
                 <input class="popup-avatar__input form__input" id="avatar-input" type="url" name="avatar-input" placeholder="Ссылка на каринку" value="" required>
                 <span class="form__input-error error-link error" id="avatar-input-error"></span>                
