--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,9 @@
             <button class="close-button" type="button" name="close-button"></button>
             <h3 class="popup-plus__title">Новое место</h3>
             <form class="popup-plus__container form__set" novalidate name="card-form" id="card-form">
-                <input class="popup-plus__name form__input" id="place-input" type="text" name="place-input" placeholder="Название" value="" required minlength="1" maxlength="30">
+                <input class="popup-plus__name form__input" id="place-input" type="text" name="place_input" placeholder="Название" value="" required minlength="1" maxlength="30">
                 <span class="form__input-error error-place top" id="place-input-error"></span>
-                <input class="popup-plus__info form__input" id="url-input" type="url" name="url-input" placeholder="Ссылка на картинку" value="" required>
+                <input class="popup-plus__info form__input" id="url-input" type="url" name="url_input" placeholder="Ссылка на картинку" value="" required>
                 <span class="form__input-error error-link error" id="url-input-error"></span>
                 <button class="popup-plus__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Создать</button>
             </form>
