--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
                     <h3 class="element__number"></h3>
                 </div>
             </div>
+        </figure>
     </template>
     <!-- подтверждение удаления карточки -->
     <div class="popup-modal popup-delete">
