--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                 <span class="form__input-error error-name top" id="name-input-error"></span>
                 <input class="popup__info form__input" id="info-input" type="text" name="info" placeholder="Исследователь океана" value="Исследователь океана" required minlength="2" maxlength="200">
                 <span class="form__input-error error-info error" id="info-input-error"></span>
-                <button class="popup__submit-button form-submit" type="submit" name="submit-button" value="сохранить">Сохранить</button>
+                <button class="popup__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Сохранить</button>
             </form>
         </div>
     </div>
@@ -57,7 +57,7 @@
                 <span class="form__input-error error-place top" id="place-input-error"></span>
                 <input class="popup-plus__info form__input" id="url-input" type="url" name="url_input" placeholder="Ссылка на картинку" value="" required>
                 <span class="form__input-error error-link error" id="url-input-error"></span>
-                <button class="popup-plus__submit-button form-submit" type="submit" name="submit-button" value="сохранить">Создать</button>
+                <button class="popup-plus__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Создать</button>
             </form>
         </div>
     </div>
@@ -85,23 +85,23 @@
     </template>
     <!-- подтверждение удаления карточки -->
     <div class="popup-modal popup-delete">
-        <div class="popup-delete__form">
+        <div class="popup-delete__form form">
             <button class="close-button" type="button" name="close-button"></button>
             <form class="popup-delete__container">
                 <h2 class="popup-delete__title">Вы уверены?</h2>
-                <button class="popup-delete__submit-button form-submit" type="submit" name="submit-button" value="сохранить">Да</button>
+                <button class="popup-delete__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Да</button>
             </form>               
         </div>
     </div> 
        <!-- Редактирование аватара -->
     <div class="popup-modal popup-avatar">
-        <div class="popup-avatar__form">
+        <div class="popup-avatar__form form">
             <button class="close-button" type="button" name="close-button"></button>
             <form class="popup-avatar__container form__set">
                 <h2 class="popup-avatar__title">Обновить аватар</h2>
                 <input class="popup-avatar__input form__input" id="avatar-input" type="url" name="avatar-input" placeholder="Ссылка на каринку" value="" required>
                 <span class="form__input-error error-link error" id="avatar-input-error"></span>                
-                <button class="popup-avatar__submit-button form-submit" type="submit" name="submit-button" value="сохранить">Cохранить</button>
+                <button class="popup-avatar__submit-button form__submit" type="submit" name="submit-button" value="сохранить">Cохранить</button>
             </form>               
         </div>
     </div>
