исправления после 1 ревью

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
     <div class="popup-modal popup-avatar">
         <div class="popup-avatar__form form">
             <button class="close-button" type="button" name="close-button"></button>
-            <form class="popup-avatar__container form__set">
+            <form class="popup-avatar__container form__set" novalidate name="avatar-form" id="avatar-form">
                 <h2 class="popup-avatar__title">Обновить аватар</h2>
                 <input class="popup-avatar__input form__input" id="avatar-input" type="url" name="avatar-input" placeholder="Ссылка на каринку" value="" required>
                 <span class="form__input-error error-link error" id="avatar-input-error"></span>                
